# trade_pro

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml  report_calculation.ini  setup.py  supervisord.conf
.github/workflows/: format.yml
alembic/: README.md  alembic.ini  env.py
pgsql/init.d/: add_db.sh
trade_pro/: config.py  db.py  errors.py  main.py  utils.py
trade_pro/api/: api.py
trade_pro/model/: base.py
trade_pro/rabbitmq/: config.py  consumer.py  errors.py  initialize.py  publisher.py  requester.py  runner.py  utils.py
trade_pro/strategy/: __init__.py  base.py  runner.py  utils.py
trade_pro/strategy/config/: mas_strategy_btcusdt.json  mas_strategy_ethusdt.json
trade_pro/strategy/data/: BTCUSDT_1d.csv  ETHUSDT_1d.csv  ETHUSDT_1h.csv
trade_pro/strategy/strategies/: ema_strategy.py  macd_strategy.py  mas_strategy.py  rsi_strategy.py  stochastic_strategy.py
trade_pro/telegram/: bot.py  initialize.py  runner.py  telegram.py
